# py-framework-ui

./: .gitignore  .gitignore.save  Dockerfile  Jenkinsfile  README.md  README_SETUP.md  pyproject.toml
framework/: utils.py  web_elements.py
framework/locators/: add_remove.py  common.py  dropdown.py  main_page.py
parsing/: json_parser.py  xml_parser.py  yaml_parser.py
tests/: README.md  conftest.py  test_add_remove.py  test_dropdown.py  test_lesson22.py  test_main_page.py  test_requests.py
