[tool.poetry]
name = "sticey-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "4.2.0"
requests = "^2.27.1"
webdriver-manager = "^3.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
allure-pytest = "2.9.45"
pre-commit = "2.16.0"
webdriver-manager = "^3.7.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

